PIP-929 Fix all Sonar warnings